<package>
 <name>motoman_bmda3_support</name>
 <version>0.0.1</version>
 <description>
  <p>
      ROS Industrial support for the Motoman bmda3 (and variants).
    </p>
  <p>
      This package contains configuration data, 3D models and launch files
      for Motoman bmda3 manipulators.
    </p>
  <p>
   <b>Specifications</b>
  </p>
  <ul>
   <li>bmda3 - Default</li>
  </ul>
  <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online 
      http://www.motoman.com/datasheets/bmda3.pdf
      All urdfs are based on the OEM default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
  <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
 </description>
 <author>Paul Hvass</author>
 <maintainer email="paul.hvass@gmail.com"/>
 <license>Apache2.0</license>
 <url type="website">http://ros.org/wiki/motoman_bmda3_support</url>
 <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
 <url type="repository">https://github.com/ros-industrial/motoman</url>
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roslaunch</build_depend>
 <run_depend>motoman_driver</run_depend>
 <run_depend>robot_state_publisher</run_depend>
 <run_depend>rviz</run_depend>
 <run_depend>joint_state_publisher</run_depend>
 <export>
  <architecture_independent/>
 </export>
</package>
