<package>

  <name>motoman_csda10f_moveit_config</name>
  <version>0.2.0</version>
  <description>
     Package with all the configuration and launch files for using the motoman_csda10f with the MoveIt! Motion Planning Framework, and ready to work with FS100 controller.
  </description>
  <author email="amrith1007@gmail.com">Amrith Ganesh</author>
  <maintainer email="amrith1007@gmail.com">Amrith Ganesh</maintainer>
  <maintainer email="daniels.ordonez@gmail.com">Daniel Ordonez</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_sda10f_moveit_config</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
  <build_depend>motoman_csda10f_support</build_depend>
  <run_depend>motoman_csda10f_support</run_depend>


</package>
