<?xml version="1.0" ?>
<package format="2">
  <name>motoman_epx_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Motoman EPX series (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman EPX series manipulators. This currently includes the EPX1250.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="http://www.motoman.co.uk/index.php?eID=tx_nawsecuredl&amp;u=0&amp;file=uploads/tx_catalogrobot/Flyer_Robot_EPX_Series_E_06.2015_14.pdf&amp;t=1497456139&amp;hash=83b40060f48cedc735f13370d186ed26f5b27a7d">
      Motoman EPX product specification document</a>.
      All URDFs / XACROs are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/motoman_epx_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
