<package>
  <name>motoman_es165rdii_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the MOTOMAN ES_165_RD_II (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for MOTOMAN ES_165_RD_II manipulators. This currently includes the base model.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the MOTOMAN data sheets.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/motoman_es165rdii_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>motoman_driver</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
