<package>
  <name>motoman_es_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the MOTOMAN ES robot variants.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for MOTOMAN ES manipulators. This currently includes the ES165RD-II and ES200RN-120.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="http://www.motoman.co.uk/index.php?eID=tx_nawsecuredl&amp;u=0&amp;file=uploads/tx_catalogrobot/Flyer_Robot_ES165RD_II_ES200RD_II_E_06.2015_14.pdf&amp;t=1494181154&amp;hash=d6a6d0e9d1b0b1f69858d061f0fa2b497b89c26f">
      Motoman ES165RDII Product Specification document</a> and
      <a href="http://www.motoman.co.uk/index.php?eID=tx_nawsecuredl&amp;u=0&amp;file=uploads/tx_catalogrobot/es200rn-120_en_10.pdf&amp;t=1494444680&amp;hash=6cd3610046bfe9403e2a00475498ecec08507dfd">
      Motoman ES200RN-120 Product Specification document</a>.
      All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/motoman_es_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>motoman_driver</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
