<?xml version='1.0' encoding='ASCII'?>
<package format="2">
  <name>motoman_mh5_ikfast_manipulator_plugin</name>
  <version>0.0.0</version>
  <description>The motoman_mh5_ikfast_manipulator_plugin package</description>
  <maintainer email="nitish.sharma@plusonerobotics.com">nitishsharma</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <moveit_core plugin="${prefix}/motoman_mh5_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>
  <depend>moveit_core</depend>
  <depend>liblapack-dev</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>pluginlib</depend>
</package>
