<?xml version="1.0" ?>
<package format="2">
  <name>motoman_mh_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Motoman MH series (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman MH series manipulators. This currently includes the MH180-120
      only.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="https://cdn2.hubspot.net/hubfs/366775/Blog_Robots/MH180-120.pdf?t=1494345552355">
      Motoman MH180-120 product specification document</a>.
      All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/motoman_mh_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
