<?xml version="1.0"?>
<package format="2">

  <name>motoman_mpp3h_support</name>
  <version>0.3.5</version>
  <description>
    ROS Industrial support for the Motoman MPP3H delta robot. 
    This package contains the robot_description, 3D models, launch files and configuration data.
  </description>

  <author     email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer (IPA Fraunhofer)</author>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer (IPA Fraunhofer)</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_mpp3h_kinematics</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
